--- a/SmartManager/Views/Pages/Home.xaml
+++ b/SmartManager/Views/Pages/Home.xaml
@@ -1,9 +1,9 @@
 ﻿<Page
-    x:Class="SamrtManager.Views.Pages.Home"
+    x:Class="SmartManager.Views.Pages.Home"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:SamrtManager.Views.Pages"
+    xmlns:local="clr-namespace:SmartManager.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     d:DataContext="{d:DesignInstance local:Home,
