--- a/SmartManager/App.xaml
+++ b/SmartManager/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application
-    x:Class="SamrtManager.App"
+    x:Class="SmartManager.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:Shared.Converters;assembly=Shared"
-    xmlns:local="clr-namespace:SamrtManager"
+    xmlns:local="clr-namespace:SmartManager"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     DispatcherUnhandledException="OnDispatcherUnhandledException"
     Exit="OnExit"
