--- a/SmartManager/Views/MainWindow.xaml
+++ b/SmartManager/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<ui:FluentWindow
-    x:Class="SamrtManager.Views.MainWindow"
+    x:Class="SmartManager.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:SamrtManager.Views"
+    xmlns:local="clr-namespace:SmartManager.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="智慧管理员"
