--- a/SmartLibrary/Views/Pages/AddBook.xaml
+++ b/SmartLibrary/Views/Pages/AddBook.xaml
@@ -172,7 +172,8 @@
                         Grid.Row="1"
                         extensions:ScrollAnimationBehavior.IsEnabled="True"
                         extensions:ScrollAnimationBehavior.PointsToScroll="16"
-                        extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
+                        extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
+                        extensions:TouchableScrollViewer.IsEnabled="True">
                         <Grid
                             Margin="32,16,32,0"
                             HorizontalAlignment="Center"
@@ -242,7 +243,8 @@
                 Margin="8,0,0,0"
                 extensions:ScrollAnimationBehavior.IsEnabled="True"
                 extensions:ScrollAnimationBehavior.PointsToScroll="16"
-                extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
+                extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
+                extensions:TouchableScrollViewer.IsEnabled="True">
                 <StackPanel Margin="0,0,12,0">
                     <ui:CardExpander IsExpanded="True">
                         <ui:CardExpander.Header>
