--- a/SmartManager/App.xaml
+++ b/SmartManager/App.xaml
@@ -14,6 +14,7 @@
                 <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
                 <ResourceDictionary Source="/Shared;Component/Style/MyButton.xaml" />
+                <ResourceDictionary Source="/Shared;Component/Style/MyCheckBox.xaml" />
                 <ResourceDictionary Source="/Shared;Component/Style/SelectableTextBlock.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
