--- a/SmartManager/Views/Pages/Settings.xaml
+++ b/SmartManager/Views/Pages/Settings.xaml
@@ -55,7 +55,8 @@
         <ScrollViewer
             extensions:ScrollAnimationBehavior.IsEnabled="True"
             extensions:ScrollAnimationBehavior.PointsToScroll="16"
-            extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
+            extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
+            extensions:TouchableScrollViewer.IsEnabled="True">
             <StackPanel MaxWidth="1180" Margin="0,0,12,0">
                 <ui:TextBlock
                     Margin="0,12,0,0"
